# roboparty_imu

./: .gitignore  CMakeLists.txt  init_imu.sh  package.xml
.github/workflows/: build-deb.yml
cmake/: roboparty_imuConfig.cmake.in  roboto_imuConfig.cmake.in
debian/: changelog  control  copyright  postinst  rules
include/: imu_driver.hpp
src/: CMakeLists.txt  imu_driver.cpp  pybind_module.cpp
src/drivers/: CMakeLists.txt
src/drivers/hipnuc/: CMakeLists.txt
src/protocol/: CMakeLists.txt
src/protocol/can/: socket_can.cpp  socket_can.hpp
src/protocol/serial/: serial_port.cpp  serial_port.hpp
